@@ -141,9 +141,9 @@ void flext::GetAString(const t_atom &a,char *buf,int szbuf)
 	atom_string(const_cast<t_atom *>(&a),buf,szbuf);
 #else
     // no checking for size here
-    if(IsSymbol(a)) sprintf(buf,GetString(a));
-	else if(IsFloat(a)) sprintf(buf,"%f",GetFloat(a));
-	else if(IsInt(a)) sprintf(buf,"%i",GetInt(a));
+    if(IsSymbol(a)) STD::sprintf(buf,GetString(a));
+	else if(IsFloat(a)) STD::sprintf(buf,"%f",GetFloat(a));
+	else if(IsInt(a)) STD::sprintf(buf,"%i",GetInt(a));
     else *buf = 0;
 #endif
 }  
