@@ -24,6 +24,16 @@ LDFLAGS=-Wl,-s
 
 LIBS=m
 
+
+ifdef FLEXT_SHARED
+CFLAGS+=-DFLEXT_SHARED
+LDFLAGS+=-Bdynamic
+LINKFLEXT=-lflext
+else
+LINKFLEXT=$(FLEXTLIB)
+endif
+
+
 # ----------------------------------------------
 # the rest can stay untouched
 # ----------------------------------------------
@@ -48,8 +58,8 @@ $(TARGDIR):
 $(TARGDIR)/%.o : $(SRCDIR)/%.cpp 
 	$(CXX) -c $(CFLAGS) $(FLAGS) $(patsubst %,-I%,$(INCLUDES) $(FLEXTPATH)) $< -o $@
 
-$(TARGET) : $(patsubst %.cpp,$(TARGDIR)/%.o,$(SRCS)) $(FLEXTLIB) 
-	$(CXX) $(LDFLAGS) -shared $^ $(patsubst %,-l%,$(LIBS)) -o $@ 
+$(TARGET) : $(patsubst %.cpp,$(TARGDIR)/%.o,$(SRCS)) 
+	$(CXX) $(LDFLAGS) -shared $^ $(patsubst %,-l%,$(LIBS)) -L$(FLEXTPATH) $(LINKFLEXT) -o $@ 
 	strip --strip-unneeded $@
 	chmod 755 $@
 
